Table users {
  id INTEGER [pk, increment]
  username VARCHAR(50) [not null, unique]
  email VARCHAR(255) [not null, unique]
  password_hash VARCHAR(255) [not null]
  bio TEXT
  location VARCHAR(100)
  created_at DATETIME [default: `now()`]
}

Table activities {
  id INTEGER [pk, increment]
  owner_id INTEGER [not null]
  title VARCHAR(200) [not null]
  sport_type ESPORT_TYPE [not null]
  distance FLOAT
  duration INTEGER
  polyline TEXT
  path GEOMETRY(LINESTRING, 3857)
  visibility EVISIBILITY [default: 'public']
  started_at DATETIME
  created_at DATETIME [default: `now()`]
  common_activity_id INTEGER

  indexes {
    (owner_id)
    (path) [type: GIST]
    (common_activity_id)
  }
}

Table common_activities {
  id INTEGER [pk, increment]
  name VARCHAR(200) [not null]
  sport_type ESPORT_TYPE [not null]
  polyline TEXT
  path GEOMETRY(LINESTRING, 3857)
  distance FLOAT

  indexes {
    (path) [type: GIST]
  }
}

Table friendships {
  id INTEGER [pk, increment]
  requester_id INTEGER [not null]
  addressee_id INTEGER [not null]
  status EFRIENDSHIP_STATUS [default: 'pending']
  created_at DATETIME [default: `now()`]

  indexes {
    (requester_id)
    (addressee_id)
  }
}

Table kudos {
  id INTEGER [pk, increment]
  activity_id INTEGER [not null]
  user_id INTEGER [not null]
  created_at DATETIME [default: `now()`]

  indexes {
    (activity_id)
    (user_id)
  }
}

Table activity_athletes {
  activity_id INTEGER [not null]
  user_id INTEGER [not null]

  indexes {
    (activity_id, user_id) [pk]
  }
}

Enum ESPORT_TYPE {
  run
  ride
  walk
  hike
}

Enum EVISIBILITY {
  public
  friends
  private
}

Enum EFRIENDSHIP_STATUS {
  pending
  accepted
}

Ref: activities.owner_id > users.id
Ref: activities.common_activity_id > common_activities.id

Ref: friendships.requester_id > users.id
Ref: friendships.addressee_id > users.id

Ref: kudos.activity_id > activities.id
Ref: kudos.user_id > users.id

Ref: activity_athletes.activity_id > activities.id
Ref: activity_athletes.user_id > users.id

